# LLM-web-ui

./: README.md
llm-wui/: .dockerignore  .env  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
llm-wui/_server/: Dockerfile  entrypoint.sh
llm-wui/_server/_server/: settings.py
llm-wui/_server/core/: models.py  urls.py  views.py
llm-wui/_server/core/migrations/: 0001_initial.py  0002_settings.py  0003_settings_style.py
llm-wui/_server/core/templates/core/: index.html
llm-wui/_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
llm-wui/_server/registration/templates/registration/style/: base.css
llm-wui/client/: Dockerfile  package-lock.json  package.json
llm-wui/client/src/: App.css  App.jsx  index.css  main.jsx  main.tsx  temp.tsx
llm-wui/client/src/components/: ChatHeader.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  Markdown.tsx  SettingsDialog.tsx  chatWindow.jsx  chat_functions.ts  settings_functions.ts
llm-wui/client/src/components/ui/: scroll-area.tsx  toggle.tsx
llm-wui/client/src/data/: Chat.ts  Message.ts  mockChats.ts
llm-wui/client/src/hooks/: useFetch.js
llm-wui/client/src/styles/: globals.css
